new compare description

--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -1,6 +1,6 @@
 # SWEAGLE PARAMETERS
 sweagleURL="https://testing.sweagle.com"
-aToken="YOUR API TOKEN HERE"
+aToken="YOUR TOKEN HERE"
 
 function apiToken() {
 cat <<EOF
