--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -1,9 +1,43 @@
 pipeline {
+    environment {
+        CONFIG_DIR = "<DIRECTORY OR FILE WHERE YOU PUT YOUR CONFIG TO UPLOAD TO SWEAGLE>"
+        SWEAGLE_SCRIPTS_DIR = "<DIRECTORY WHERE YOU PUT YOUR SWEAGLE SCRIPTS, EACH NODE SEPARATED BY COMMA>"
+        SWEAGLE_PATH = "<PATH IN DATA MODEL WHERE YOU WANT TO PUT YOUR CONFIG DATA>"
+        SWEAGLE_MDS = "<METADATASET YOU WANT TO GET CONFIG DATA FROM>"
+        SWEAGLE_VALIDATORS = "<OPTIONAL, LIST OF CUSTOM VALIDATORS, SEPARATED BY SPACES, USED TO CHECK YOUR CONFIG>"
+        SWEAGLE_EXPORTER = "<EXPORTER USED TO RETRIEVE YOUR CONFIG>"
+        SWEAGLE_EXPORTER_ARGS = "<OPTIONAL, EXPORTER ARGUMENTS IF ANY, SEPARATED BY COMMA>"
+        SWEAGLE_EXPORTER_FORMAT = "<OPTIONAL, FORMAT USED FOR DOWNLOADED CONFIG: PROPS (DEFAULT), YAML, JSON, XML>"
+        SWEAGLE_EXPORTER_OUTPUT = "<OPTIONAL, TARGET FILE TO EXPORT CONFIG DATA TO, DEFAULT OUTPUT IS SCREEN>"
+    }
+
     agent any
+
     stages {
-        stage('Stage 1') {
+        stage('UploadConfig') {
             steps {
-                echo 'Hello world!'
+                echo '**********'
+                echo '*** Upload Configuration files to Sweagle'
+                sh '$SWEAGLE_SCRIPTS_DIR/uploadDirToSweagle.sh $SWEAGLE_PATH $CONFIG_DIR'
+            }
+        }
+        stage('CheckConfig'){
+            steps {
+                echo '**********'
+                echo '*** Ask Sweagle to check your configuration All-in-One'
+                sh '$SWEAGLE_SCRIPTS_DIR/checkAllConfigByMdsValidator.sh $SWEAGLE_MDS $SWEAGLE_VALIDATORS'
+            }
+        }
+
+        stage('DownloadConfig') {
+            steps {
+                echo '**********'
+                echo '*** Retrieve lastest valid configuration from Sweagle'
+                echo '*** Sweagle will also fill token values, if any'
+                // Store your config snapshot in order to be able to retrieve it
+                sh '$SWEAGLE_SCRIPTS_DIR/storeConfigSnapshotByMds.sh $SWEAGLE_MDS'
+                // Download your config using exporter
+                sh '$SWEAGLE_SCRIPTS_DIR/getConfigByMdsParserArgs.sh $SWEAGLE_MDS $SWEAGLE_EXPORTER args=$SWEAGLE_EXPORTER_ARGS format=$SWEAGLE_EXPORTER_FORMAT output=$SWEAGLE_EXPORTER_OUTPUT'
             }
         }
     }
