--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -2,6 +2,10 @@
 sweagleURL="https://testing.sweagle.com"
 aToken="YOUR TOKEN HERE"
 
+# Directory where you put the sweagle scripts
+sweagleScriptDir="YOUR PATH HERE"
+
+
 function apiToken() {
 cat <<EOF
 authorization: Bearer $aToken
