--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -11,3 +11,15 @@ cat <<EOF
 authorization: Bearer $aToken
 EOF
 }
+
+# function to extract the value of a json key from json string (if present)
+# inputs are key to search for, and number of the occurrence to extract (default 1 if none provided)
+function jsonValue() {
+   key=$1
+   if [[ -z "$2" ]]; then
+      num=1
+   else
+      num=$2
+   fi
+   awk -F"[,:}]" '{for(i=1;i<=NF;i++){if($i~/\042'$key'\042/){print $(i+1)}}}' | tr -d '"' | sed -n ${num}p
+}
