--- a/xl-deploy/xldeploy.env
+++ b/xl-deploy/xldeploy.env
@@ -1,10 +1,10 @@
 # XL-DEPLOY PARAMETERS
-xlDeployURL="http://100.100.100.101:4516/deployit"
-xlDeployUser="admin"
-xlDeployPassword="admin"
+xlDeployURL="http://<YOUR HOST HERE>:<YOUR PORT HERE>/deployit"
+xlDeployUser="YOUR USER HERE"
+xlDeployPassword="YOUR PASSWORD HERE"
 
 # Directory where you put the xl-deploy scripts
-xlDeployScriptDir="/home/dfinas/git/sweagle_expert/integrations/xl-deploy"
+xlDeployScriptDir="<YOUR PATH HERE>"
 
 # function to extract the value of a json key from json string (if present)
 # inputs are key to search for, and number of the occurrence to extract (default 1 if none provided)
