add INI in comments

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         SWEAGLE_VALIDATORS = "<OPTIONAL, LIST OF CUSTOM VALIDATORS, SEPARATED BY SPACES, USED TO CHECK YOUR CONFIG>"
         SWEAGLE_EXPORTER = "<EXPORTER USED TO RETRIEVE YOUR CONFIG>"
         SWEAGLE_EXPORTER_ARGS = "<OPTIONAL, EXPORTER ARGUMENTS IF ANY, SEPARATED BY COMMA>"
-        SWEAGLE_EXPORTER_FORMAT = "<OPTIONAL, FORMAT USED FOR DOWNLOADED CONFIG: PROPS (DEFAULT), YAML, JSON, XML>"
+        SWEAGLE_EXPORTER_FORMAT = "<OPTIONAL, FORMAT USED FOR DOWNLOADED CONFIG: PROPS (DEFAULT), INI, YAML, JSON, XML>"
         SWEAGLE_EXPORTER_OUTPUT = "<OPTIONAL, TARGET FILE TO EXPORT CONFIG DATA TO, DEFAULT OUTPUT IS SCREEN>"
     }
 
