Correct syntax + Add default image to use

--- a/gitlabCICD/.gitlab-ci.yml
+++ b/gitlabCICD/.gitlab-ci.yml
@@ -1,20 +1,31 @@
 stages:
   - build
-  - uploadConfiguration
   - test
   - staging
   - production
 
+image: node:6
+
+# WARNING: check if your tenant is case sensitive (default) to input vars below
 variables:
   CONFIG_DIR: "<DIRECTORY OR FILE WHERE YOU PUT YOUR CONFIG TO UPLOAD TO SWEAGLE>"
-  SWEAGLE_SCRIPTS_DIR: "<DIRECTORY WHERE YOU PUT YOUR SWEAGLE SCRIPTS, EACH NODE SEPARATED BY COMMA>"
-  SWEAGLE_PATH: "<PATH IN DATA MODEL WHERE YOU WANT TO PUT YOUR CONFIG DATA>"
+  # ex: CONFIG_DIR: "./conf"
+  SWEAGLE_SCRIPTS_DIR: "<DIRECTORY WHERE YOU PUT YOUR SWEAGLE SCRIPTS>"
+  # ex: SWEAGLE_SCRIPTS_DIR: "./scripts"
+  SWEAGLE_PATH: "<PATH IN DATA MODEL WHERE YOU WANT TO PUT YOUR CONFIG DATA, EACH NODE SEPARATED BY COMMA>"
+  # ex: SWEAGLE_PATH: "dimension,node1,node2"
   SWEAGLE_MDS: "<METADATASET YOU WANT TO GET CONFIG DATA FROM>"
+  # ex: SWEAGLE_MDS: "dimension" or SWEAGLE_MDS:$APP_NAME-$ENV_NAME (if they have been defined before)
   SWEAGLE_VALIDATORS: "<OPTIONAL, LIST OF CUSTOM VALIDATORS, SEPARATED BY SPACES, USED TO CHECK YOUR CONFIG>"
+  # ex: SWEAGLE_VALIDATORS: "noDevValues noEmptyValues passwordChecker"
   SWEAGLE_EXPORTER: "<EXPORTER USED TO RETRIEVE YOUR CONFIG>"
+  # ex: SWEAGLE_EXPORTER: "all" or SWEAGLE_EXPORTER: "returnDataForNodeName"
   SWEAGLE_EXPORTER_ARGS: "<OPTIONAL, EXPORTER ARGUMENTS IF ANY, SEPARATED BY COMMA>"
+  # ex: SWEAGLE_EXPORTER_ARGS: "" or SWEAGLE_EXPORTER_ARGS: "node1"
   SWEAGLE_EXPORTER_FORMAT: "<OPTIONAL, FORMAT USED FOR DOWNLOADED CONFIG, PROPS (DEFAULT), YAML, JSON, XML>"
+  # ex: SWEAGLE_EXPORTER_FORMAT: "YAML"
   SWEAGLE_EXPORTER_OUTPUT: "<OPTIONAL, TARGET FILE TO EXPORT CONFIG DATA TO, DEFAULT OUTPUT IS SCREEN>"
+  # ex: SWEAGLE_EXPORTER_OUTPUT: "" or SWEAGLE_EXPORTER_OUTPUT: "./release"
 
 #build:
 #  stage: build
@@ -23,14 +34,14 @@ variables:
 #    - echo build
 #  after_script: []
 
-
+# At the end of build, upload "builded" configuration to SWEAGLE
 uploadConfiguration:
-  stage: uploadConfiguration
+  stage: build
   only:
   - master
   script:
     - echo **********
-    - echo *** Send configuration to Sweagle
+    - echo *** Send configuration to SWEAGLE
     - chmod +x $SWEAGLE_SCRIPTS_DIR/*.sh
     - $SWEAGLE_SCRIPTS_DIR/uploadDirToSweagle.sh $SWEAGLE_PATH $CONFIG_DIR
     - echo *** Configuration sent
@@ -47,10 +58,10 @@ deployTestEnvironment:
     - echo **********
     - echo *** Check configuration from Sweagle
     - chmod +x $SWEAGLE_SCRIPTS_DIR/*.sh
-    - $SWEAGLE_SCRIPTS_DIR/checkAllConfigByMdsValidator.sh $SWEAGLE_MDS $SWEAGLE_VALIDATORS'
+    - $SWEAGLE_SCRIPTS_DIR/checkAllConfigByMdsValidator.sh $SWEAGLE_MDS $SWEAGLE_VALIDATORS
     # you may create your own wrapper of Sweagle scripts to match an App or Env to an MDS
-    echo *** Retrieve lastest valid configuration from Sweagle
-    echo *** Sweagle will also fill token values, if any
+    - echo *** Retrieve lastest valid configuration from SWEAGLE
+    - echo *** SWEAGLE will also fill token values, if any
     # Store your config snapshot in order to be able to retrieve it
     - $SWEAGLE_SCRIPTS_DIR/storeConfigSnapshotByMds.sh $SWEAGLE_MDS
     # Download your config using exporter
