correct syntax errors

--- a/gitlab/gitlab.env
+++ b/gitlab/gitlab.env
@@ -3,14 +3,15 @@ gitlabProjectId="YOUR_GITLAB_PROJECT_ID"
 
 # See here to know how to generate your Token:
 # https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html
-# The scope of the token shoudl be "API"
+# The scope of the token should be "API"
 gitlabToken="Private-Token: YOUR_GITLAB_TOKEN"
 
 gitlabUrl="https://gitlab.com/api/v4/projects/$gitlabProjectId/repository/files"
 
 # It is recomended to deliver files to a specific branch (for example release)
 # This branch shouldn't trigger the build pipeline,
-# but may trigger a specific deployment pipeline (dependign on your CICD configuration)
+# but may trigger a specific deployment pipeline (depending on your CICD configuration)
+# WARNING: You must create the branch before or script won't do anything
 gitlabBranch="release"
 gitlabAuthor="sweagle%20API"
 gitlabAuthorEmail="sweagleAPI@customer.com"
