--- a/gitlabCICD/.gitlab-ci.yml
+++ b/gitlabCICD/.gitlab-ci.yml
@@ -10,24 +10,24 @@ stages:
 
 # WARNING: check if your tenant is case sensitive (default) to input vars below
 variables:
-  CONFIG_DIR: "./conf"
+  CONFIG_DIR: ""
   # ex: CONFIG_DIR: "./conf"
   SWEAGLE_SCRIPTS_DIR: "./scripts"
   # ex: SWEAGLE_SCRIPTS_DIR: "./scripts"
-  SWEAGLE_PATH: "ora-dtsi,network"
+  SWEAGLE_PATH: ""
   # ex: SWEAGLE_PATH: "dimension,node1,node2"
-  SWEAGLE_MDS: "ora-dtsi"
+  SWEAGLE_MDS: ""
   # ex: SWEAGLE_MDS: "dimension" or SWEAGLE_MDS:$APP_NAME-$ENV_NAME (if they have been defined before)
   #SWEAGLE_VALIDATORS: "noDevValues noEmptyValues passwordChecker"
   SWEAGLE_VALIDATORS: ""
   # ex: SWEAGLE_VALIDATORS: "noDevValues noEmptyValues passwordChecker"
-  SWEAGLE_EXPORTER: "returnDataForNodeName"
+  SWEAGLE_EXPORTER: ""
   # ex: SWEAGLE_EXPORTER: "all" or SWEAGLE_EXPORTER: "returnDataForNodeName"
-  SWEAGLE_EXPORTER_ARGS: "F5"
+  SWEAGLE_EXPORTER_ARGS: ""
   # ex: SWEAGLE_EXPORTER_ARGS: "" or SWEAGLE_EXPORTER_ARGS: "node1"
-  SWEAGLE_EXPORTER_FORMAT: "YAML"
+  SWEAGLE_EXPORTER_FORMAT: ""
   # ex: SWEAGLE_EXPORTER_FORMAT: "YAML"
-  SWEAGLE_EXPORTER_OUTPUT: "./release/F5.yml"
+  SWEAGLE_EXPORTER_OUTPUT: ""
   # ex: SWEAGLE_EXPORTER_OUTPUT: ""
   GITLAB_TARGET_DIR: "/release"
   # ex: GITLAB_TARGET_DIR: "/release"
