--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -25,16 +25,17 @@ function jsonValue() {
 }
 
 # function to extract http return code from curl request
-# arg1: http result (incl. http code)
-# arg2: httpcode (by reference)
+# arg1: httpcode (returned by function)
+# arg2: http result (incl. http code)
 function get_httpreturn() {
-	local -n __http=${1}
-	local -n __res=${2}
-
+	__res="${!2}"
 	__http="${__res:${#__res}-3}"
-    if [ ${#__res} -eq 3 ]; then
-      __res=""
-    else
-      __res="${__res:0:${#__res}-3}"
-    fi
+  if [ ${#__res} -eq 3 ]; then
+    __res=""
+  else
+    __res="${__res:0:${#__res}-3}"
+  fi
+
+  eval ${1}=${__http}
+	eval ${2}='$(echo ${__res})'
 }
