--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -27,15 +27,29 @@ function jsonValue() {
 # function to extract http return code from curl request
 # arg1: httpcode (returned by function)
 # arg2: http result (incl. http code)
-function get_httpreturn() {
-	__res="${!2}"
-	__http="${__res:${#__res}-3}"
-  if [ ${#__res} -eq 3 ]; then
-    __res=""
-  else
-    __res="${__res:0:${#__res}-3}"
-  fi
+if [ -z $BASH_VERSION ] && [ "$BASH_VERSION" == "4.3*" ]; then
+  function get_httpreturn() {
+  	local -n __http=${1}
+  	local -n __res=${2}
 
-  eval ${1}=${__http}
-	eval ${2}='$(echo ${__res})'
-}
+  	__http="${__res:${#__res}-3}"
+      if [ ${#__res} -eq 3 ]; then
+        __res=""
+      else
+        __res="${__res:0:${#__res}-3}"
+      fi
+  }
+else
+  function get_httpreturn() {
+  	__res="${!2}"
+  	__http="${__res:${#__res}-3}"
+    if [ ${#__res} -eq 3 ]; then
+      __res=""
+    else
+      __res="${__res:0:${#__res}-3}"
+    fi
+
+    eval ${1}=${__http}
+  	eval ${2}='$(echo ${__res})'
+  }
+fi
