correct unbound variable

--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -1,7 +1,8 @@
 # SWEAGLE PARAMETERS
 sweagleURL="https://testing.sweagle.com"
-aToken="YOUR_TOKEN_HERE"
-
+#aToken="YOUR_TOKEN_HERE"
+## Testing
+aToken="93fc8264-79c3-47fd-82ff-64491f3b1e21"
 
 ##########################################################
 #                    FUNCTIONS
@@ -16,10 +17,10 @@ EOF
 # inputs are key to search for, and number of the occurrence to extract (default 1 if none provided)
 function jsonValue() {
    key=$1
-   if [[ -z "$2" ]]; then
-      num=1
+   if [ $# -gt 1 ]; then
+     num=$2
    else
-      num=$2
+     num=1
    fi
    awk -F"[,:}]" '{for(i=1;i<=NF;i++){if($i~/\042'$key'\042/){print $(i+1)}}}' | tr -d '"' | sed -n ${num}p
 }
