--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -2,9 +2,9 @@
 # Variables shared among ALL HOSTS
 
 # Variable to use CLI instead of API`
-use_cli: yes
+use_cli: no
 # Variable to install CLI and db.json
-install_cli: yes
+install_cli: no
 
 # Folder where CLI will be installed on target host
 # Defautl is local folder where ansible commands are executed
@@ -20,13 +20,16 @@ db_file: "/Users/dimitris/git/sweagle-expert/integrations/ansible/db.json"
 # then sweagle_url,  sweagle_token and validate_certs are used as source of connection info
 # and validate_certs is used to
 sweagle_url: "https://testing.sweagle.com"
-sweagle_token: "104e6b08-9bbf-4b66-a06a-30b799XXXXXX"
+sweagle_token: ""
 # Tells if SSL should validate server certificate, put yes if self-signed certificate
 ignore_ssl: no
 
 changeset_title: "ansible test"
 changeset_description: "this is dimitris test with ansible"
 auto_approve: true
+
+cds: "samples-dev"
+node_path: "samples-frontend,environment,dev"
 
 from_file_list:
   - { file_path: "/Users/dimitris/Documents/Clients/DELFINGEN/POC/inputs/dev.properties", node_path: "samples-frontend,environment,dev" }
