--- a/ansible/roles/uploadData/tasks/main.yml
+++ b/ansible/roles/uploadData/tasks/main.yml
@@ -48,7 +48,7 @@
 
 - name: CLI - Install CLI
   include_role:
-    name: CLI-install
+    name: installCLI
   when: use_cli and install_cli
 
 - name: CLI - Upload file(s) to SWEAGLE server
